--- a/.drone.yml
+++ b/.drone.yml
@@ -5,11 +5,10 @@ pipeline:
   build:
     image: madduci/docker-ubuntu-cpp
     commands:
-      - apt-get -yy -qq -o=Dpkg::Use-Pty=0 install libcurl4-openssl-dev cmake
+      - apt-get -qq -yy -o=Dpkg::Use-Pty=0 install libcurl4-openssl-dev cmake
       - mkdir ./build && cd ./build && cmake .. && make
 
   test:
     image: madduci/docker-ubuntu-cpp
     commands:
-      - apt-get -yy -qq -o=Dpkg::Use-Pty=0 install libcurl4-openssl-dev python
       - cd ./build && make check
