--- a/.drone.yml
+++ b/.drone.yml
@@ -11,4 +11,5 @@ pipeline:
   test:
     image: madduci/docker-ubuntu-cpp
     commands:
+      - apt-get -qq -yy -o=Dpkg::Use-Pty=0 install libcurl4-openssl-dev
       - cd ./build && make check
