--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(${PROJECT}_check
   connection_test.cc
+  auth_test.cc
 )
 
 target_include_directories(${PROJECT}_check PUBLIC ${CMAKE_SOURCE_DIR}/extern)
