Added install to cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,4 @@ add_library(${PROJECT} SHARED
 
 target_include_directories(${PROJECT} PUBLIC ${CURL_INCLUDE_DIRS})
 target_link_libraries(${PROJECT} PUBLIC ${CURL_LIBRARIES})
+install(TARGETS ${PROJECT} LIBRARY DESTINATION /usr/local/lib)
