--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.1.0)
+set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
+
+include(cotire)
 
 set(PROJECT cppclient-rest)
 set(CURL_LIBRARY "-lcurl") 
@@ -8,9 +11,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic")
 find_package(CURL REQUIRED) 
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/extern/mandatory)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_SOURCE_DIR}/doc)
+
+enable_testing()
 add_subdirectory(${CMAKE_SOURCE_DIR}/test)
 
 install(DIRECTORY include/cppclient DESTINATION /usr/local/include)
