--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,14 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/test)
 
 install(DIRECTORY include/cppclient DESTINATION /usr/local/include)
 install(FILES extern/mandatory/json.hpp DESTINATION /usr/local/include)
+
+# uninstall target
+if(NOT TARGET uninstall)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY)
+
+  add_custom_target(uninstall
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake)
+endif()
