--- a/.drone.yml
+++ b/.drone.yml
@@ -14,4 +14,4 @@ pipeline:
     commands:
       - apt-get -qq -yy update
       - apt-get -qq -yy -o=Dpkg::Use-Pty=0 install libcurl4-openssl-dev
-      - cd ./build && make test
+      - cd ./build && make check
