--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(${PROJECT} SHARED
+add_library(
+  ${PROJECT} SHARED
   connection.cc
   response.cc
   helper.cc
@@ -6,4 +7,6 @@ add_library(${PROJECT} SHARED
 
 target_include_directories(${PROJECT} PUBLIC ${CURL_INCLUDE_DIRS})
 target_link_libraries(${PROJECT} PUBLIC ${CURL_LIBRARIES})
+target_compile_options(${PROJECT} PUBLIC -std=c++11 -Wall -Wextra -Werror -pedantic)
+
 install(TARGETS ${PROJECT} LIBRARY DESTINATION lib)
