--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: generic
 
 sudo: false
 
+cache: packages
 addons:
   apt:
     sources:
@@ -14,8 +15,6 @@ jobs:
   include:
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -28,8 +27,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -42,8 +39,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -56,8 +51,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -70,8 +63,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -86,8 +77,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -102,8 +91,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -118,8 +105,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -134,8 +119,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -149,8 +132,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -164,8 +145,6 @@ jobs:
 
     - stage: test
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
@@ -179,8 +158,6 @@ jobs:
 
     - stage: doc
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           packages:
@@ -192,8 +169,6 @@ jobs:
 
     - stage: install
       os: linux
-      cache:
-        apt: true
       addons:
         apt:
           sources:
